tests/str_esc_ucode_err01.json.err
Parse error at line 1

001: ["Missing \u0"]
                   ^
Expected four hexadecimal digits
